--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   </table>
   <hr>
   <p><em><b>Contact Me</b></em></p>
-  <p><b><a href="Contact Form.html">Click here to fill the form</a></b></p>
+  <p><b><a href="contact-form.html">Click here to fill the form</a></b></p>
 
 </body>
 
