--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <td>
           <h1><a href="https://www.facebook.com/diyar.agha93">Diyar T. Ibrahim</a></h1>
           <h2>Civil and Structural Engineer</h2>
-          <h3>a Web Developer at <a href="https://about.google/">Google</a> (Min Teezi)</h3>
+          <h3>a Web Developer at <a href="https://about.google/">Google</a></h3>
           <h4><em>The Founder of Maza Club</em></em></h4>
         </td>
       </tr>
